--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.application.name=JaTaskFlow
 
 spring.security.user.name=admin
 spring.security.user.password=password
+
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:taskdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
