--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+# JWT
+jwt.access.secret=your-access-secret-key-here-1234567890
+jwt.refresh.secret=your-refresh-secret-key-here-1234567890
+jwt.access.lifetime=5
+jwt.refresh.lifetime=43200
