Updated project properties

--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-jwt.access.secret=your-access-secret-key-here-1234567890
-jwt.refresh.secret=your-refresh-secret-key-here-1234567890
-jwt.access.lifetime=5
-jwt.refresh.lifetime=43200
+jwt.access.secret=your-256-bit-secret-for-access-token-change-me-please
+jwt.refresh.secret=your-256-bit-secret-for-refresh-token-change-me-please
+jwt.access.lifetime=5 # minutes
+jwt.refresh.lifetime=1440 # minutes (24 hours)
