Added the Security Configuration

--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.password=
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+# ????????? ?????? ??? H2 ? development
+spring.security.filter.dispatcher-types=request, async, error
 
 # JPA
 spring.jpa.show-sql=true
@@ -19,7 +21,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-jwt.access.secret=your-256-bit-secret-for-access-token-change-me-please
-jwt.refresh.secret=your-256-bit-secret-for-refresh-token-change-me-please
-jwt.access.lifetime=5 # minutes
-jwt.refresh.lifetime=1440 # minutes (24 hours)
+jwt.access.secret=your-secret-key-12345
+jwt.refresh.secret=your-refresh-secret-12345
+jwt.access.lifetime=5
+jwt.refresh.lifetime=1440
