--- a/JaTaskFlow/build.gradle
+++ b/JaTaskFlow/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.19'
 }
 
 tasks.named('test') {
