Implemented a method for updating tokens

--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -12,7 +12,6 @@ spring.datasource.password=
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# ????????? ?????? ??? H2 ? development
 spring.security.filter.dispatcher-types=request, async, error
 
 # JPA
@@ -23,5 +22,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # JWT
 jwt.access.secret=your-secret-key-12345
 jwt.refresh.secret=your-refresh-secret-12345
-jwt.access.lifetime=5
-jwt.refresh.lifetime=1440
+jwt.access.expiration=300000
+jwt.refresh.expiration=86400000
