--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -24,3 +24,8 @@ jwt.access.secret=your-secret-key-12345
 jwt.refresh.secret=your-refresh-secret-12345
 jwt.access.expiration=300000
 jwt.refresh.expiration=86400000
+
+# Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
