An error has been fixed during authorization

--- a/JaTaskFlow/src/main/resources/application.properties
+++ b/JaTaskFlow/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-jwt.access.secret=your-secret-key-12345
-jwt.refresh.secret=your-refresh-secret-12345
+jwt.access.secret=your-256-bit-secret-for-access-token-1234567890abcdef1234567890abcdef
+jwt.refresh.secret=your-256-bit-secret-for-refresh-token-1234567890abcdef1234567890abcdef
 jwt.access.expiration=300000
 jwt.refresh.expiration=86400000
 
@@ -29,3 +29,5 @@ jwt.refresh.expiration=86400000
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.enabled=true
+
+logging.level.org.springframework.security=DEBUG
